--- a/Art page project.html
+++ b/Art page project.html
@@ -13,7 +13,7 @@
 <header class="Head">
 <img src="Images/Grafittiart.jpeg" alt="grafittiart"/>
     
-<h1> Silvias Art Page</h1>
+<h1> Silvias Art Page with cats^^</h1>
 
 </header>
     
