Updated silvia page as of yet

--- a/Art page project.html
+++ b/Art page project.html
@@ -10,12 +10,23 @@
 <title>Silvias Art Page</title>
 </head>
 <body>
-<header class="Head">
-<img src="Images/Grafittiart.jpeg" alt="grafittiart"/>
-    
-<h1> Silvias Art Page with cats^^</h1>
+    <div class="header" id="Artheader">
 
-</header>
-    
+ <h1>Silvias Art Page</h1>
+<img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
+  
+</div>
+ <div class="row">
+<div class="column">
+<img src="Images\knifegirlpurple.PNG" alt="Girlwithknife"/>
+
+    </div>
+
+
+ </div>
+
+
+
+
 </body>
 </html>
