work in progress image gallery section

--- a/Art page project.html
+++ b/Art page project.html
@@ -14,13 +14,14 @@
 
  <h1>Silvias Art Page</h1>
 <img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
-  
-</div>
- <div class="row">
-<div class="column">
-<img src="Images\knifegirlpurple.PNG" alt="Girlwithknife"/>
+  </div>
+
+ <div class="image-container1">
+<img id="knifegirl" src="Images\knifegirlpurple.PNG" alt="Girlwithknife"/>
+<div class="knife-text">
 
     </div>
+ </div>
 
 
  </div>
