Got to fix header going go so far on galery sect

--- a/Art page project.html
+++ b/Art page project.html
@@ -7,23 +7,25 @@
 <link rel="stylesheet" href="Styles.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta charset="UTF-8" />
-<title>Silvias Art Page</title>
+<title>Art Gallery</title>
 </head>
 <body>
+  <header>
     <div class="header" id="Artheader">
-
- <h1>Silvias Art Page</h1>
-<img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
+ <h1>Art Galley</h1>
+ <div>
+  <img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
   </div>
-
- <div class="image-container1">
-<img id="knifegirl" src="Images\knifegirlpurple.PNG" alt="Girlwithknife"/>
-<div class="knife-text">
-
     </div>
- </div>
-
-
+</header>
+ <div class="image-container1">
+<img id="knifegirl" src="Images\knifegirlpurple.PNG" alt="knifegirl"/>
+</div>
+<div class="image-container2">
+  <img id="squidgirl" src="Images/squidgirl.PNG" alt="Squidgirls"/>
+</div>
+<div class="image-container3">
+  <img id="dogcat" src="Images/Capture.PNG" alt="openmicdog"/>
  </div>
 
 
