Updated method of doing header

--- a/Art page project.html
+++ b/Art page project.html
@@ -10,14 +10,12 @@
 <title>Art Gallery</title>
 </head>
 <body>
-  <header>
+
     <div class="header" id="Artheader">
- <h1>Art Galley</h1>
- <div>
+ <h1>The Art Galley</h1> 
   <img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
-  </div>
-    </div>
-</header>
+    </div>   
+
  <div class="image-container1">
 <img id="knifegirl" src="Images\knifegirlpurple.PNG" alt="knifegirl"/>
 </div>
