Figured out custom font working on adding images

--- a/Art page project.html
+++ b/Art page project.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="header" id="Artheader">
- <h1>The Art Galley</h1> 
+ <h1>@silvia.folio</h1> 
   <img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
  </div>
 
