LOts of progress here more images porbable

--- a/Art page project.html
+++ b/Art page project.html
@@ -12,18 +12,18 @@
 <body>
 
     <div class="header" id="Artheader">
- <h1>@silvia.folio</h1> 
+ <h1>Gallery</h1> 
   <img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
  </div>
 
- <div class="image-container1">
-<img id="knifegirl" src="Images\knifegirlpurple.PNG" alt="knifegirl"/>
-</div>
-<div class="image-container2">
-  <img id="squidgirl" src="Images/squidgirl.PNG" alt="Squidgirls"/>
-</div>
-<div class="image-container3">
-  <img id="dogcat" src="Images/Capture.PNG" alt="openmicdog"/>
+ <div class="image-gallery">
+<img id="knifegirl" src="Images\knifegirlpurple.PNG" alt="girl licking a knife"/>
+<img id="squidgirl" src="Images/squidgirl.PNG" alt="girl captured in a chair by one eyed squid women"/>
+<img id="dogcat" src="Images/Capture.PNG" alt="a dog and cat with pitchfork dressed in human clothes"/>
+<img id="celebration" src="Images/Celebration.jpg" alt="man wearing 2023 glasses pouring out winer"/>
+<img id="fishgirl" src="Images/Fishgirl.jpg" alt="Fish crying for a girl lying in a casket"/>
+<img id="fireflies" src="Images/Modsquad.jpg" alt="Flier with fireflies glowing in the dark"/>
+<img id="oceanmother" src="Images/Oceanmother.jpg" alt="ocean mother absorbing earth"/>
  </div>
 
 
