Working on it adding hyperlink

--- a/Art page project.html
+++ b/Art page project.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-
-
-<link rel="stylesheet" href="Styles.css"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<meta charset="UTF-8" />
-<title>Art Gallery</title>
+    <link rel="stylesheet" href="Styles.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <title>Art Gallery</title>
 </head>
 <body>
-
     <div class="header" id="Artheader">
- <h1>Gallery</h1> 
-  <img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
- </div>
+        <a href="Commissions" class="header-link">Commissions</a>
+        <h1>Gallery</h1> 
+        <div class="header-logo">
+            <img id="logo" src="Images/axegirl.PNG" alt="axegirl"/>
+        </div>
+    </div>
 
  <div class="image-gallery">
 <img id="knifegirl" src="Images\knifegirlpurple.PNG" alt="girl licking a knife"/>
