Very good progress still having header issues

--- a/Art page project.html
+++ b/Art page project.html
@@ -11,10 +11,16 @@
 </head>
 <body>
 
-    <div class="header" id="Artheader">
- <h1>Gallery</h1> 
-  <img id="logo" src="Images\axegirl.PNG" alt="axegirl"/>
- </div>
+  <header>
+    <div class="title-container">
+    <h1>Gallery</h1>
+    <img src="Images\axegirl.PNG" alt="Logo">
+    </div>
+    
+    <nav class="nav">
+    <a href="Contact Me!">Contact Me!</a>
+  </nav>
+</header>
 
  <div class="image-gallery">
 <img id="knifegirl" src="Images\knifegirlpurple.PNG" alt="girl licking a knife"/>
